--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,31 @@
-# https://cezarypiatek.github.io/post/develop-vsextension-with-github-actions/
-# https://docs.microsoft.com/en-us/visualstudio/msbuild/msbuild-command-line-reference?view=vs-2019
-
 name: CI
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: windows-2019
+    stage: build
+    image: maciekbaron/sgdk:latest
+    script:
+      # Build the rom using SGDK
+      - make -f $GENDEV/sgdk/mkfiles/makefile.gen clean all
+    artifacts:
+      paths:
+        # Save the result of the build (in our case, out/rom.bin)
+        - out/
+    only:
+      refs:
+        - master
+        - merge_requests    
 
-    # environment variables
-    env:
-        RepositoryUrl: 'https://github.com/${{ github.repository }}'
-        RepositoryBranch: '${{ github.ref }}'
-        SourceRevisionId: '${{ github.sha }}'
-        Configuration: Release      
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      
-      # Prepare
-      - name: Prepare
-        run: .\scripts\prepare.ps1
-        
-      - name: Build
-        run: .\scripts\build.ps1        
-
-      - name: ROM for Artifact
-        uses: actions/upload-artifact@v2
-        with:
-         path: ${{ github.workspace }}\out\rom.bin
-         name: ROM-${{ github.run_number }}
+      # - name: ROM for Artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #    path: ${{ github.workspace }}\out\rom.bin
+      #    name: ROM-${{ github.run_number }}
