--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
         run: docker build -t sgdk .
         working-directory: ./SGDK
       
+      - name: List
+        run: ls 
+
       - name: Build
         run: docker run --rm -v ${pwd}:/src sgdk       
 
